--- a/sample_site/templates/index.html
+++ b/sample_site/templates/index.html
@@ -46,7 +46,7 @@
     var mycavas = document.getElementById("mycavas");
     var ctx= mycavas.getContext("2d");
     ctx.lineWidth = 5;
-    ctx.strokeStyle= color1;
+    ctx.strokeStyle= "blue";
 
     mycavas.onmousedown = function(){
         mycavas.onmousemove = function(e){
